--- a/css/polish-sidebar.css
+++ b/css/polish-sidebar.css
@@ -10,8 +10,17 @@
 }*/
 
 /* Sidebar navigation */
+.sidebar{
+  position: fixed;
+  top: 51px;
+  bottom: 0;
+  left: 0;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-right: 1px solid #eee;
+}
+
 .nav-sidebar {
- /* background-color: #e8e8e8;*/
   margin-right: -15px;
   margin-bottom: 20px;
   margin-left: -15px;
@@ -24,34 +33,9 @@
   color: #f5f5f5;
   background-color: #428bca;
 }
-
-/*
- * Off Canvas
- * --------------------------------------------------
- */
-@media screen and (max-width: 768px) {
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all 0.25s ease-out;
-    -moz-transition: all 0.25s ease-out;
-    transition: all 0.25s ease-out;
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: -33%;
-  }
-
-  .row-offcanvas-left.active {
-    left: 33%;
-  }
-
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-    width: 33%;
-    margin-left: 10px;
-  }
+nav h4{
+   padding-right: 20px;
+   padding-left: 20px;
 }
 
 
